* Fixed wrapping of Abstract View/File Download information. * Changed front page tool-tip styling. * Made news page consistent with new look.

--- a/css/home.css
+++ b/css/home.css
@@ -343,7 +343,6 @@ width: 2em;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-style: normal;
 	font-weight: normal;
-	font-size: 70%;
 	padding: 2px 2px 10px 10px;
 	margin: 10px;
 	border-bottom: 1px solid #DDDDDD;
@@ -365,7 +364,7 @@ width: 2em;
 
 /* Tool tips */
 a.tool-tip {
-	font-weight: bold;
+	font-weight: normal;
 	position: relative;
 	z-index: 1;
 	text-decoration: none;
